# tally

./: .actrc  .gitignore  .secrets.example  CLAUDE.md  Makefile  README.md  docker-compose.yml  github-actions-version-management.md
.github/: ACTION_VERSIONS.md  action-versions.conf  copilot-instructions.md  dependabot.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 12aa348bb14f_add_notes_to_bills.py  262a5ed35636_initial_schema.py  54706ec6f371_initial_schema.py  937249cdc4e0_add_user_activity_tracking.py  9f979f5fb842_initial_schema.py  a1b2c3d4e5f6_add_terms_accepted_at_to_users.py  b88c09336fb3_add_enabled_to_windfalls.py  c889d199265f_add_bill_events_table.py  dce3073b2c4e_make_users_email_nullable.py  e6a7f75ee398_add_forecast_settings_to_bank_accounts.py  f7442af7b00b_add_cycle_overrides_table.py
backend/src/: bill_events.py  bills_csv.py  csv_match.py  main.py  transactions_csv.py  windfalls_csv.py
backend/src/api/: accounts.py  bills.py  cycle_overrides.py  dashboard.py  demo.py  deps.py  forecast.py  me.py  transactions.py  windfalls.py
backend/src/core/: auth.py  config.py  database.py  logging.py
backend/src/forecast/: __init__.py  bill.py  bill_history.py  cycle.py  cycle_override.py  engine.py  transaction.py  windfall.py
backend/src/models/: __init__.py  bank_account.py  bill.py  bill_event.py  cycle_override.py  transaction.py  user.py  user_daily_activity.py  windfall.py
backend/src/schemas/: bank_account.py  bill.py  bill_event.py  bill_history.py  cycle_override.py  dashboard.py  demo.py  forecast.py  transaction.py  user.py  windfall.py
backend/tests/: conftest.py  test_accounts_api.py  test_app.py  test_auth.py  test_bill_events_api.py  test_bill_history_api.py  test_bills_api.py  test_bills_csv.py  test_config.py  test_csv_match.py  test_cycle_overrides_api.py  test_dashboard_api.py  test_database.py  test_demo_api.py  test_deps.py  test_forecast_api.py  test_forecast_engine.py  test_me_api.py  test_transactions_api.py  test_windfalls_api.py
docs/: ANALYTICS.md  BRANDING.md  DEVELOPING.md  LOCAL-TERRAFORM-DEV.md  MONETIZATION.md  OPERATIONS.md  PRODUCTION_READINESS.md  ROADMAP.md  cost-optimization.md  github-actions-version-management.md  neon-terraform.md
frontend/: .dockerignore  (+8 more)
(+120 files in other folders)
