[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = []
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
httpx = "^0.27.0"
mangum = "^0.19.0"
sqlalchemy = {version = ">=2.0", extras = ["asyncio"]}
asyncpg = "^0.31.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
pydantic-settings = "^2.14.2"
python-multipart = "^0.0.32"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"

# Needed to run the Docker Compose / container deployment path, not the Lambda
# handler (Mangum wraps the app directly there) - kept out of the main group so
# the Lambda zip doesn't carry it.
[tool.poetry.group.server.dependencies]
gunicorn = {extras = ["standard"], version = "^23.0.0"}

# CLI-only, for running migrations against Neon - not imported by the app itself.
[tool.poetry.group.migrate.dependencies]
alembic = "^1.18.5"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
